# dlwithtensorflow

./: README.md  build.sh
dlwithtensorflow/: CMakeLists.txt  CMakeLists_back.txt  README.md  layout_det.cpp  layout_det.h  main.cpp  main_back.cpp  main_rec.cpp  run.sh  table_det.cpp  table_det.h  test_html.py  text_angle_cls.cpp  text_det.cpp  text_det.h  text_det_old.cpp  text_det_old.h  text_rec.cpp  text_rec.h  utility.cpp  utility.h
tensorflow-tutorial-master/Deep_Learning_with_TensorFlow/0.12.0/Chapter09/: 1. 命名空间.ipynb
tensorflow-tutorial-master/Deep_Learning_with_TensorFlow/0.12.0/Chapter09/.ipynb_checkpoints/: 1. 命名空间-checkpoint.ipynb
